--- a/src/deps/highlight/highlight-within-textarea.css
+++ b/src/deps/highlight/highlight-within-textarea.css
@@ -1,12 +1,9 @@
-textarea {
-	background-color: transparent !important;
-}
-
 .hwt-container {
 	display: inline-block;
 	position: relative;
 	overflow: hidden !important;
 	-webkit-text-size-adjust: none !important;
+	padding: 0 !important;
 }
 
 .hwt-backdrop {
@@ -15,7 +12,8 @@ textarea {
 	right: -99px !important;
 	bottom: 0 !important;
 	left: 0 !important;
-	padding-right: 99px !important;
+	margin: 0 !important;
+	padding: 0 99px 0 0 !important;
 	overflow-x: hidden !important;
 	overflow-y: auto !important;
 }
@@ -23,7 +21,9 @@ textarea {
 .hwt-highlights {
 	width: auto !important;
 	height: auto !important;
+	margin: 0 !important;
 	border-color: transparent !important;
+	border-width: 0 !important;
 	white-space: pre-wrap !important;
 	word-wrap: break-word !important;
 	color: transparent !important;
@@ -33,16 +33,17 @@ textarea {
 .hwt-input {
 	display: block !important;
 	position: relative !important;
-	margin: 0;
-	padding: 0;
+	/* padding: 0;
 	border-radius: 0;
-	font: inherit;
+	font: inherit; */
+	margin: 0 !important;
 	overflow-x: hidden !important;
 	overflow-y: auto !important;
 }
 
 .hwt-content {
-	border: 1px solid;
+	border-width: 1px;
+	border-style: solid;
 	background: none transparent !important;
 }
 
