--- a/src/deps/highlight/highlight.css
+++ b/src/deps/highlight/highlight.css
@@ -23,12 +23,10 @@
 	height: auto !important;
 	margin: 0 !important;
 	border-color: transparent !important;
-	border-width: 0 !important;
 	white-space: pre-wrap !important;
 	word-wrap: break-word !important;
 	color: transparent !important;
 	overflow: hidden !important;
-	padding: 0 !important;
 }
 
 .hwt-input {
@@ -40,8 +38,8 @@
 }
 
 .hwt-content {
-	border-width: 1px;
-	border-style: solid;
+	/* border-width: 1px;
+	border-style: solid; */
 	background: none transparent !important;
 }
 
