--- a/src/test-page.css
+++ b/src/test-page.css
@@ -12,8 +12,14 @@
   top: 0; left: 0; bottom: 0; right: 0;
 }
 
-#story {
+#one {
   border: 5px solid #5fa8b3;
   font-family: sans-serif;
   font-size: 100%;
+}
+
+#two {
+  border: 1px solid #cc2492;
+  font-family: sans-serif;
+  font-size: 80%;
 }
