--- a/test_page/test-page.css
+++ b/test_page/test-page.css
@@ -2,72 +2,33 @@ body {
   font-family: sans-serif;
   text-align: center;
   font-size: 22px;
-  /* color: blue; */
+}
+
+div.container {
+  position: relative;
+}
+
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  height: 210px;
+  width: 310px;
 }
 
 #one {
-  font-family: inherit;
-  font-size: inherit;
   border: 3px solid limegreen;
-  height: 210px;
-  width: 310px;
   position: relative;
   display: inline-block;
 }
 
 #two {
-  font-family: inherit;
-  font-size: inherit;
-  height: 210px;
-  width: 310px;
   border: 3px solid tomato;
   position: relative;
   display: inline;
 }
 
 #three {
-  font-family: inherit;
-  font-size: inherit;
-  height: 210px;
-  width: 310px;
   border: 3px solid lightblue;
   position: relative;
   display: block;
 }
-
-.suggestions-wrapper {
-  box-sizing: border-box;
-  position: relative;
-  perspective: 1000px;
-  margin: 80px auto;
-  transition: 0.5s;
-  height: 32px;
-  width: 0px;
-}
-
-.suggestions {
-  line-height: 32px;
-  position: absolute;
-  height: inherit;
-  transform-style: preserve-3d;
-  transition: inherit;
-}
-
-.suggestion {
-  position: absolute;
-  font-family: inherit;
-  font-weight: inherit;
-  letter-spacing: inherit;
-  height: inherit;
-  transition: inherit;
-}
-
-.suggestion:nth-child(1) { transform: rotateX(0deg) translateZ(48px) }
-.suggestion:nth-child(2) { transform: rotateX(40deg) translateZ(48px) }
-.suggestion:nth-child(3) { transform: rotateX(80deg) translateZ(48px) }
-.suggestion:nth-child(4) { transform: rotateX(120deg) translateZ(48px) }
-.suggestion:nth-child(5) { transform: rotateX(160deg) translateZ(48px) }
-.suggestion:nth-child(6) { transform: rotateX(200deg) translateZ(48px) }
-.suggestion:nth-child(7) { transform: rotateX(240deg) translateZ(48px) }
-.suggestion:nth-child(8) { transform: rotateX(280deg) translateZ(48px) }
-.suggestion:nth-child(9) { transform: rotateX(320deg) translateZ(48px) }
