--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -1,8 +1,8 @@
 html, body {
-  width: 18em;
+  width: 100%;
   height: auto;
   margin: 0;
-  padding: 0;
+  padding-left: 8px;
 
   overflow-x: hidden;
 
@@ -50,6 +50,13 @@ a:hover {
   display: inline-block;
   font-size: small;
   float: right;
+}
+
+#colorPicker input {
+  position: relative;
+  top: 0.5em;
+  padding: 0.1em;
+  width: 100%;
 }
 
 .options {
