Fix broken readme links
Add missing credits link to ToC

Tidy up background script

Fix race condition and ensure listeners up when sidebar opens

Fix highlights layout being off after preveiwing a color

Fix preview/choosing colour breaking highlights layout

Fix blink mark conditional preventing blink mark from firing

Match suggestions hover opacity to highlight opacity

Fix isWholeWord not using word.text

Remove unused getSuggestions from Spelling class
Fix getMisspeltWordIndex not working

Words added/removed by shortcuts/context menu immediately appear in dict

Remove WordCarousel in favour of inlining all suggestions

Update readme to explain suggestions behaviour

--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -60,6 +60,7 @@ a:hover {
 
 #colorPicker input {
   -webkit-appearance: none !important; /* Needed to clear default Mozilla styles */
+  opacity: 35%;
   border-style: hidden;
   position: relative;
   top: 0.5em;
@@ -78,6 +79,7 @@ a:hover {
 #suggestions input {
   -webkit-appearance: none !important; /* Needed to reset default Mozilla styles */
   background-color: var(--bg-hover-color);
+  opacity: 35%;
   position: relative;
   top: 0.3em;
   padding: 0.1em;
