Add nspell as npm dependency
Remove statis nspell dep folder and files
Add nspell license
Update readme

Rename add and remove methods everywhere

Add functioning sidebar language list

Refactor all instances of MultiDict to Multidict

Fix customSettings storage format

Fix disableNativeSpellcheck requiring page refresh

Add report a bug link to sidepanel

Add browser notification for adding/removing languages

Update readme to reflect changes

--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -51,9 +51,7 @@ a:hover {
   background-color: var(--bg-hover-color);
 }
 
-#menu div {
-  position: relative;
-  display: inline-block;
+#menu .arrow {
   font-size: small;
   float: right;
 }
@@ -100,6 +98,10 @@ a:hover {
 
 .options label:hover {
   cursor: pointer;
+}
+
+.options input {
+  float: right;
 }
 
 .words {
